fix error json tag, and generate swagger doc, update test
